NFT preview card component solution

--- a/index.html
+++ b/index.html
@@ -16,14 +16,31 @@
   <body>
     <main>
       <div class="card">
-        <div class="card-image"></div>
+        <div class="card-image">
+          <div class="active-states">
+            <img src="images/icon-view.svg" alt="icon-view" />
+          </div>
+        </div>
         <div class="card-body">
           <h1 class="card-title">Equilibrium #3429</h1>
           <p class="card-text">
             Our Equilibrium collection promotes balance and calm.
           </p>
-          <div class="card-price">0.041 ETH 3 days left</div>
-          <div class="card-footer">Creation of Jules Wyvern</div>
+          <div class="card-price">
+            <div class="price">
+              <img src="images/icon-ethereum.svg" alt="icon-ethereum" />
+              <span>0.041 ETH</span>
+            </div>
+            <div class="time">
+              <img src="images/icon-clock.svg" alt="icon-clock" />
+              <span>3 days left</span>
+            </div>
+          </div>
+          <div class="card-footer">
+            <img src="images/image-avatar.png" alt="avatar" />
+            <p>Creation of</p>
+            <span>Jules Wyvern</span>
+          </div>
         </div>
       </div>
     </main>
